# plant-controller

./: .gitignore  ACKNOWLEDGEMENTS.md  README.md  STATUS.md
docs/pt/: PARTS-MASTER-LIST.md  PARTS.md  PT-architecture.drawio  PT-schematic.drawio  system-architecture.drawio
docs/pt/controller_1/: PARTS.md  PT-electrical-schematic.drawio
docs/pt/controller_3/: PARTS.md
docs/pt/green_house_1/: PARTS.md  PT-electrical-schematic.drawio
docs/pt/green_house_3/: PT-electrical-schematic.drawio
pt/: QUESTIONS.md
pt/controller_1/: CHANGELOG.md  README.md  SCHEMATICS.md  TODO.md  comm.py  config.py  controller-1.py  pump.py  requirements.txt  store.py  subscriber.py
pt/controller_1/comm/: stomp.py
pt/controller_2/: CHANGELOG.md  README.md  controller-2.py  sensehat.py
pt/controller_3/: CHANGELOG.md  README.md  green_house_3.py  sensehat.py
pt/dedicated_sensors/: README.md  requirements.txt  sensors_influxdb.py  sht_bh_3_moisture_sensors.py  sht_bh_sensors.py
pt/green_house_1/: .coveragerc  CHANGELOG.md  README.md  SCHEMATICS.md  TODO.md  config.yaml  pyproject.toml  pytest.ini  requirements.txt
pt/green_house_1/dedicated_sensors/: README.md  green_house_1.py  requirements.txt
pt/green_house_1/relay/: README.md
pt/green_house_1/src/: green_house_1.py  motors.py  store.py
pt/green_house_2/: README.md
pt/green_house_3/: WAVESHARE_RELAY.md  relay.py  requirements.controller.txt
pt/relay/: digital_logger.py
pt/senseHAT/: plot-hum-temp-pres.py  plot-hum-temp.py  plot-humidity.py
pt/skunk/: README.md
pt/waveshare-relay/: on-off.py
(+17 files in other folders)
