[project]
name = "green-house-1"
version = "0.2.0"
description = "Controller for first greenhouse prototype"
authors = [
    {name = "prasadtalasila",email = "prasadtalasila@users.noreply.github.com"}
]
license = { file = "LICENSE.md" }
readme = "README.md"
requires-python = ">=3.12,<4.0"
packages = [{include = "*", from="src"}]

[tool.poetry]

[tool.poetry.dependencies]
influxdb-client = "^1.48.0"
adafruit-circuitpython-as7341 = "^1.2.21"
adafruit-circuitpython-seesaw = "^1.16.5"
adafruit-circuitpython-sht4x = "^1.0.22"
adafruit-circuitpython-tca9548a = "^0.8.0"
schedule = "^1.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
pylint = "^3.3.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "src.green_house_1:main"
